--- a/roles/hunter/tasks/main.yml
+++ b/roles/hunter/tasks/main.yml
@@ -3,11 +3,15 @@
 
 - name: IPA Server Hunter Tasks
   import_tasks: ipaserver.yml
-  when: "'ipa' in group_names"
+  when:
+    - "'ipa' in group_names"
+    - ipa_use |bool
 
 - name: IPA Client Hunter Tasks
   import_tasks: ipaclient.yml
-  when: "'ipa' not in group_names"
+  when:
+    - "'ipa' not in group_names"
+    - ipa_use |bool
 
 - name: Login Node Hunter Tasks
   import_tasks: login.yml
