--- a/roles/ipa/tasks/main.yml
+++ b/roles/ipa/tasks/main.yml
@@ -1,9 +1,14 @@
+- name: Check hostname correct for IPA server
+  fail:
+    msg: "The hostname of this server ({{ ansible_fqdn }}) does not match the specified IPA server name ({{ ipa_server }}.{{ ipa_domain }})"
+  when: ansible_fqdn != (ipa_server + '.' + ipa_domain)
+
 - name: Ensure self resolvable through /etc/hosts
   blockinfile:
     path: /etc/hosts
     marker: "# {mark} OPENFLIGHT IPA HOST ENTRY - DO NOT TOUCH"
     block: |
-      {{ ansible_default_ipv4.address |default(ansible_all_ipv4_addresses[0]) }}    {{ ansible_fqdn }} {{ ansible_hostname }}.{{ cluster_name }} {{ ansible_hostname }} {{ ipa_server }}.{{ ipa_domain }}
+      {{ ansible_default_ipv4.address |default(ansible_all_ipv4_addresses[0]) }}    {{ ansible_fqdn }} {{ ansible_hostname }}.{{ cluster_name }} {{ ansible_hostname }} 
 
 - name: Allow IPA services through firewall
   firewalld:
