Remove DNS entry for node from IPA

--- a/roles/remove/tasks/hunter.yml
+++ b/roles/remove/tasks/hunter.yml
@@ -65,6 +65,7 @@
     ipa_host: "{{ ipa_server }}.{{ ipa_domain }}"
     ipa_user: admin
     ipa_pass: "{{ secure_admin_password }}"
+    update_dns: true
     state: absent
   loop: "{{ hunter_node_remove }}"
   when:
