--- a/roles/flightweb/tasks/main.yml
+++ b/roles/flightweb/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Start Flight WWW
   command: "/opt/flight/bin/flight service restart www"
 
-- name: Generate Let's Encrypt certificate
+- name: Can Successfully Generate Let's Encrypt certificate?
   command: "/opt/flight/bin/flight www cert-gen --cert-type lets-encrypt --domain {{ access_host }} --email certs@openflighthpc.org"
   register: letsencryptout
   failed_when: "letsencryptout.rc > 0"
