--- a/roles/hunter/tasks/generic.yml
+++ b/roles/hunter/tasks/generic.yml
@@ -35,6 +35,7 @@
   shell: "{% for item in hunter_nodes %} sudo -i /opt/flight/bin/flight hunter show {{ item.label }} |grep '{{ item.ip }}' -B 2  |grep ':mac:' |sed 's/.*:mac: //g' ;{%endfor %}"
   register: hunter_macs
   delegate_to: localhost
+  run_once: true
   when:
     - mac_firewall
   tags:
@@ -45,6 +46,7 @@
   shell: "sudo -i /opt/flight/bin/flight hunter list --plain  |awk '{print $3}'"
   register: hunter_ips
   delegate_to: localhost
+  run_once: true
   tags:
     - never
     - pre
