Restart ctld for reconfigure to work

--- a/roles/slurm/tasks/controller.yml
+++ b/roles/slurm/tasks/controller.yml
@@ -7,6 +7,9 @@
 
 - name: Turn on SLURM controller daemon
   service: name=flight-slurmctld state=restarted enabled=yes
+  tags:
+    - update
+    - remove
 
 - name: Reload SLURM configuration
   shell: "/opt/flight/opt/slurm/bin/scontrol reconfigure"
