--- a/roles/nfs/tasks/main.yml
+++ b/roles/nfs/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: NFS Server Configuration
   import_tasks: server.yml
-  when: "'login' in group_names"
+  when: "nfs_server == inventory_hostname"
 
 - name: NFS Client Configuration
   import_tasks: client.yml
