--- a/roles/nfs/vars/main.yml
+++ b/roles/nfs/vars/main.yml
@@ -1,6 +1,6 @@
 ## The hostname of the NFS server
 ### Default: The first node in the "storage" group (if present) then first in "login" group, otherwise empty
-nfs_server: ""
+default_nfs_server: ""
 
 ## IP range for NFS exports
 compute_ip_range: "10.10.0.0/16"
@@ -8,7 +8,7 @@ compute_ip_range: "10.10.0.0/16"
 # NFS Shares
 nfs_shares:
   apps:
-    server: "{{ nfs_server }}"
+    server: "{{ default_nfs_server }}"
     export: "/export/apps"
     export_owner: "{{ default_username }}"
     export_group: ""
@@ -17,7 +17,7 @@ nfs_shares:
     export_opts: "{{ compute_ip_range }}(rw,no_root_squash,sync)"
     mount_opts: intr,rsize=32768,wsize=32768,vers=3,_netdev,nofail
   data:
-    server: "{{ nfs_server }}"
+    server: "{{ default_nfs_server }}"
     export: "/export/data"
     export_owner: "{{ default_username }}"
     export_group: ""
@@ -26,7 +26,7 @@ nfs_shares:
     export_opts: "{{ compute_ip_range }}(rw,no_root_squash,sync)"
     mount_opts: intr,rsize=32768,wsize=32768,vers=3,_netdev,nofail
   service:
-    server: "{{ nfs_server }}"
+    server: "{{ default_nfs_server }}"
     export: "/export/service"
     export_owner: "root"
     export_group: "root"
@@ -35,7 +35,7 @@ nfs_shares:
     export_opts: "{{ compute_ip_range }}(rw,no_root_squash,sync)"
     mount_opts: intr,rsize=32768,wsize=32768,vers=3,_netdev,nofail
   site:
-    server: "{{ nfs_server }}"
+    server: "{{ default_nfs_server }}"
     export: "/export/site"
     export_owner: "root"
     export_group: "root"
@@ -44,7 +44,7 @@ nfs_shares:
     export_opts: "{{ compute_ip_range }}(rw,no_root_squash,sync)"
     mount_opts: intr,rsize=32768,wsize=32768,vers=3,_netdev,nofail
   home:
-    server: "{{ nfs_server }}"
+    server: "{{ default_nfs_server }}"
     export: /home
     mountpoint: /home
     export_opts: "{{ compute_ip_range }}(rw,no_root_squash,sync)"
