--- a/roles/nfs/tasks/server.yml
+++ b/roles/nfs/tasks/server.yml
@@ -2,9 +2,9 @@
   file:
     path: "{{ item.value.export }}"
     state: directory
-    mode: "{{ item.value.export_permissions }}"
-    owner: "{{ item.value.export_owner }}"
-    group: "{{ (item.value.export_group != "") |ternary(item.value.export_group, omit) }}"
+    mode: "{{ (item.value.export_permissions is defined and item.value.export_permissions != '') |ternary(item.value.export_permissions, omit) }}"
+    owner: "{{ (item.value.export_owner is defined and item.value.export_owner != '') |ternary(item.value.export_owner, omit) }}"
+    group: "{{ (item.value.export_group is defined and item.value.export_group != '') |ternary(item.value.export_group, omit) }}"
   with_dict: "{{ nfs_shares }}"
   when: "inventory_hostname == item.value.server"
 
