--- a/roles/nfs/tasks/generic.yml
+++ b/roles/nfs/tasks/generic.yml
@@ -23,6 +23,14 @@
   tags:
     - update
 
+- name: Unmount Removed NFS Mounts
+  command: "umount {{ item.value.mountpoint }}"
+  with_dict: "{{ nfs_shares }}"
+  when: "remove_node is search(item.value.server) and inventory_hostname != item.value.server and ansible_hostname != item.value.server"
+  tags:
+    - never
+    - remove
+
 - name: Mount NFS exports
   command: mount -a
   tags:
