Remove mounts from fstab for nodes disappearing

--- a/roles/nfs/tasks/generic.yml
+++ b/roles/nfs/tasks/generic.yml
@@ -15,13 +15,16 @@
       {% for item in nfs_shares|dict2items %}
       {% if groups.all is search(item.value.server) %}
       {% if inventory_hostname != item.value.server and ansible_hostname != item.value.server %}
+      {% if not remove_node is search(item.value.server) %}
       {{ item.value.server }}:{{ item.value.export }}    {{ item.value.mountpoint }}    nfs    {{ item.value.mount_opts }}    0 0
+      {% endif %}
       {% endif %}
       {% endif %}
       {% endfor %}
     state: present
   tags:
     - update
+    - remove
 
 - name: Unmount Removed NFS Mounts
   command: "umount {{ item.value.mountpoint }}"
