--- a/roles/ipa/tasks/main.yml
+++ b/roles/ipa/tasks/main.yml
@@ -51,7 +51,7 @@
     name: allow_all
     state: absent
     ipa_pass: "{{ secure_admin_password }}"
-    ipa_host: "{{ ipa_server }}"
+    ipa_host: "{{ ipa_server }}.{{ ipa_domain }}"
 
 - name: Create Generic Cluster Hostgroup
   ipa_hostgroup: 
@@ -59,7 +59,7 @@
     description: "All cluster hosts"
     state: present
     ipa_pass: "{{ secure_admin_password }}"
-    ipa_host: "{{ ipa_server }}"
+    ipa_host: "{{ ipa_server }}.{{ ipa_domain }}"
 
 - name: Create SSH Pub Key for Test User
   openssh_keypair:
@@ -76,7 +76,7 @@
     sshpubkey:
       - "{{ testuser_sshkey.public_key }}"
     ipa_pass: "{{ secure_admin_password }}"
-    ipa_host: "{{ ipa_server }}"
+    ipa_host: "{{ ipa_server }}.{{ ipa_domain }}"
 
 - name: Create Generic Cluster User Group
   ipa_group: 
@@ -84,7 +84,7 @@
     description: "Generic cluster users" 
     state: present
     ipa_pass: "{{ secure_admin_password }}" 
-    ipa_host: "{{ ipa_server }}"
+    ipa_host: "{{ ipa_server }}.{{ ipa_domain }}"
     user:
       - testuser
     append: true
@@ -101,4 +101,4 @@
     service:
       - sshd 
     ipa_pass: "{{ secure_admin_password }}" 
-    ipa_host: "{{ ipa_server }}"
+    ipa_host: "{{ ipa_server }}.{{ ipa_domain }}"
